--- a/README.Rmd
+++ b/README.Rmd
@@ -16,11 +16,11 @@ knitr::opts_chunk$set(
 ```
 
 <!-- badges: start -->
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" rel="dct:type">work</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">I Gede Semara Dharma Putra & Gede Primahadi Wijaya Rajeg</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/gederajeg/verb-noun-association" rel="dct:source">https://github.com/gederajeg/verb-noun-association</a>.
+
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt="Creative Commons License" style="border-width:0"/></a><br />This [work]{xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" rel="dct:type"} by [I Gede Semara Dharma Putra & Gede Primahadi Wijaya Rajeg]{xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"} is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/gederajeg/verb-noun-association" rel="dct:source">https://github.com/gederajeg/verb-noun-association</a>.
+
 <!-- badges: end -->
 
 ## Description
 
-The paper is complete and to be submitted soon... 
-
-More to come regarding details of this repository.
+The paper is accepted for publication in the journal *Humanitatis* in June 2024.
