--- a/README.Rmd
+++ b/README.Rmd
@@ -17,10 +17,18 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt="Creative Commons License" style="border-width:0"/></a><br />This [work]{xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" rel="dct:type"} by [I Gede Semara Dharma Putra & Gede Primahadi Wijaya Rajeg]{xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"} is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/gederajeg/verb-noun-association" rel="dct:source">https://github.com/gederajeg/verb-noun-association</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt="Creative Commons License" style="border-width:0"/></a> [![](https://img.shields.io/badge/doi-10.17605/OSF.IO/SP4KB-lightblue.svg)](https://doi.org/10.17605/OSF.IO/SP4KB) <br />This [work]{xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" rel="dct:type"} by [I Gede Semara Dharma Putra & Gede Primahadi Wijaya Rajeg]{xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"} is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/gederajeg/verb-noun-association" rel="dct:source">https://github.com/gederajeg/verb-noun-association</a>.
 
 <!-- badges: end -->
 
 ## Description
 
-The paper is accepted for publication in the journal *Humanitatis* in June 2024.
+The paper is accepted for publication in the journal *Humanitatis* and to be published around June 2024. Cite this data repository as:
+
+> Putra, I G S D & Gede Primahadi Wijaya Rajeg. 2024. The RStudio project repository of data and R notebook for the paper on verb-noun association. OSF. https://doi.org/10.17605/OSF.IO/SP4KB
+
+The follow-up study from this paper is an undergraduate thesis by Putra to be examined in 8 May 2024. The thesis (supervised by the second author of this paper) compares experimental data (based on this paper) and corpus-based data for the verb-noun co-occurrences to determine the divergence/convergence between the two data types and methods. The supplementary data for Putra's thesis can be accessed via the following link:
+
+> Putra, I Gede Semara Dharma. 2024. Dataset for “A Corpus-Based Study to Triangulating Experimental Evidence Regarding Verb-Noun Association for Action Verbs”. figshare. https://doi.org/10.6084/m9.figshare.25560714.
+
+*Our paper and Putra's undergraduate thesis are part of the outcome of the [__CompLexico__](https://github.com/complexico) research group within [CIRHSS](https://www.cirhss.org/) in the Faculty of Humanities, Udayana University.*
